arreglo bug de wrap en filtros horizontales

--- a/src/components/FilterButtons/filterbuttons.css
+++ b/src/components/FilterButtons/filterbuttons.css
@@ -9,8 +9,8 @@
 /* Dirección horizontal */
 .flex-row {
   flex-direction: row;
-  flex-wrap: wrap;
-  gap: 0.5rem;
+  flex-wrap:nowrap;
+  gap: 2rem;
 }
 
 /* Dirección vertical */
